# invisibook

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  demo.tape  go.mod  go.sum
.github/workflows/: ci.yml
app/: Cargo.toml
app/desktop/: Cargo.toml
app/desktop/src/: main.rs
app/mobile/: Cargo.toml  Dioxus.toml
app/mobile/src/: main.rs
app/src/: main.rs  style.rs
app/src/components/: orderbook.rs  toast.rs  trade_form.rs
app/ui/: Cargo.toml
app/ui/src/: constants.rs  lib.rs  style.rs  style_mobile.rs
app/ui/src/components/: header.rs  key_import.rs  mod.rs  orderbook.rs  toast.rs  trade_form.rs
chain/: Makefile  go.mod  go.sum  main.go
chain/cfg/: config.toml  core.toml
chain/cfg/tests/: alice.toml  alice_cash.json  alice_plain_cash.json  bob.toml  bob_cash.json
chain/cli/: command.go  main.go  model.go  orderbook.go  styles.go  view.go
chain/consensus/: proof_of_buying.go
chain/contract/: OrderBook.sol
chain/core/: account.go  cash.go  cash_scheme.go  config.go  order.go  order_scheme.go  orderbook.go  scheme.go  tripod.go  udt.go  utxo.go  utxo_scheme.go
chain/test/: e2e_test.go
cli/: Cargo.toml
cli/src/: command.rs  main.rs  model.rs  orderbook.rs  view.rs
client/: Cargo.toml  build.rs
client/examples/: alice.rs  bob.rs
client/mpc/: CODE_STRUCTURE.md  index.html
client/mpc/src/: App.ts  main.ts  styles.css
client/src/: emp_ag2pc.rs  emp_ag2pc_usage.md  lib.rs  main.rs  swanky_usage.rs  types.rs  yao_circuit_examples.rs
core/: account.go  tripod.go
docs/milestones/: test_guide_1.md
emp-ag2pc/: CMakeLists.txt  README.md  USAGE.md  build.sh
emp-ag2pc/include/: emp_ag2pc_ffi.h
emp-ag2pc/src/: emp_ag2pc_ffi.cpp
lib/: Cargo.toml
lib/chain/: Cargo.toml
lib/chain/src/: cash_store.rs  chain.rs  command.rs  config.rs  hd.rs  lib.rs  orderbook.rs  types.rs
lib/mpc/: Cargo.toml
lib/mpc/src/: beaver.rs  edabits.rs  error.rs  lib.rs  ot.rs
lib/src/: chain.rs  command.rs  lib.rs  orderbook.rs
(+1 files in other folders)
