[package]
name = "invisibook-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
yu-sdk = { git = "https://github.com/yu-org/yu-sdk", subdirectory = "rust" }

[target.'cfg(not(target_os = "android"))'.dependencies]
light-poseidon = "0.2"
ark-bn254 = "0.4"
ark-ff = "0.4"
