[package]
name = "invisibook-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hmac = "0.12"
bip39 = "2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
yu-sdk = "0.1.1"
toml = "0.8"
dirs = "6"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = { version = "0.23", features = ["connect"] }
futures-util = "0.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
light-poseidon = "0.2"
ark-bn254 = "0.4"
ark-ff = "0.4"
